--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <p><a href="recipes/vegetarian-borsch.html">Vegetarian Borsch</a></p>
- 
+    <ul><li><a href="recipes/vegetarian-borsch.html">Vegetarian Borsch</a></li><li><a href="recipes/beetroot-bread.html">Beetroot Bread</a></li><li><a href="recipes/duck-neck-soup.html">Duck Neck Soup</a></li></ul>
 </body>
 </html>
